@@ -1,5 +1,10 @@
 2008-11-04  Scott Ellington <scott.ellington@gmail.com> 
 
+	* Feature.cs, Data/Shapefile/Shapefile.cs, Data/IFeatureSource.cs,
+	  Data/SimpleFeatureSource.cs: hook up shapefile
+
+2008-11-04  Scott Ellington <scott.ellington@gmail.com> 
+
 	* Layer.cs, Xml/Serialization/MapSerializer.cs, Style.cs: set up
 	  theming infrastructure
 
